2004-05-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/RelGraph.py (_write_graph_record): Bug fixes.
	* src/docgen/RTFDoc.py: Typo. 
	* src/ReadXML.py: Typo.

2004-05-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/RelLib.py (probably_alive): Typos.
	* src/Plugins.py: Do not pass parent to the reports.
	* src/SubstKeywords.py (__init__): Typo.

2004-05-12  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/ChangeTypes.py: Remove Utils.modified() call.
	* src/plugins/Check.py: Remove Utils.modified() call.
	* src/plugins/PatchNames.py: Remove Utils.modified() call.
	* src/plugins/ReadGedcom.py: Remove Utils.modified() call.
	* src/plugins/ReorderIds.py: Remove Utils.modified() call.
	* src/plugins/WriteCD.py: Remove Utils.modified() call.
	* src/plugins/WritePkg.py: Remove Utils.modified() call.
	* src/plugins/Merge.py: Typo.

	* src/plugins/Check.py: Use transaction for commits.
	* src/plugins/PatchNames.py: Use transaction for commits. 
	* src/plugins/ChangeTypes.py: Use transaction for commits. 

2004-05-11  Don Allingham  <donaldallingham@users.sourceforge.net>
	* src/GrampsCfg.py: remove unused options
	* src/gramps.glade: remove unused panels in preferences
	* src/Plugins.py: removed xpm images
	* src/EventEdit.py: get full event list
	* src/plugins/AncestorChart.py: remove xpm image
	* src/plugins/AncestorChart2.py: remove xpm image
	* src/plugins/AncestorReport.py: remove xpm image
	* src/plugins/Ancestors.py: remove xpm image
	* src/plugins/BookReport.py: remove xpm image
	* src/plugins/CustomBookText.py: remove xpm image
	* src/plugins/DesGraph.py: remove xpm image
	* src/plugins/DescendReport.py: remove xpm image
	* src/plugins/DetAncestralReport.py: remove xpm image
	* src/plugins/DetDescendantReport.py: remove xpm image
	* src/plugins/FamilyGroup.py: remove xpm image
	* src/plugins/FtmStyleAncestors.py: remove xpm image
	* src/plugins/FtmStyleDescendants.py: remove xpm image
	* src/plugins/IndivComplete.py: remove xpm image