@@ -1,3 +1,6 @@
+2004-05-16  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/plugins/RelGraph.py: Menu for family options.
+
 2004-05-15  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/plugins/RelGraph.py (_write_graph_record): Bug fixes.
 	* src/docgen/RTFDoc.py: Typo. 
